# wavedump

./: README.org  README.org~
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/: CAEN_License_Agreement.txt  Readme.txt  ReleaseNotes.txt  install  install_64
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/include/: CAENDigitizerType.h
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/lib/i686/: libCAENDigitizer.so.2.15.0
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/lib/x86_64/: libCAENDigitizer.so.2.15.0
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/samples/ReadoutTest_DPP_CI_x720/src/: ReadoutTest_DPP_CI_x720.c
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/samples/ReadoutTest_DPP_PHA_x724_x781/src/: ReadoutTest_DPP_PHA_x724_x781.c
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/samples/ReadoutTest_DPP_PHA_x725_x730/src/: ReadoutTest_DPP_PHA_x725_x730.c
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/samples/ReadoutTest_DPP_PHA_x780/src/: ReadoutTest_DPP_PHA_x780.c
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/samples/ReadoutTest_DPP_PSD_x720/src/: ReadoutTest_DPP_PSD_x720.c
CAENDigitizer_2.15.0_20191001/CAENDigitizer_2.15.0/samples/ReadoutTest_DPP_PSD_x725_x730/src/: ReadoutTest_DPP_PSD_x725_x730.c
CAENUSBdrvB-1.5.2/: CAENUSBdrvB.c  Readme.txt  ReleaseNotes.txt
wavedump-3.10.0_HEU/: AUTHORS  ChangeLog  INSTALL  Makefile.in  README  configure  configure.ac
wavedump-3.10.0_HEU/include/: keyb.h  spi.h
wavedump-3.10.0_HEU/src/: Makefile.am  Makefile.in  WaveDump.c  WaveDump.c~  compile  flash.c  keyb.c  spi.c
(+3 files in other folders)
